--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "migration:create": "typeorm-ts-node-commonjs migration:create",
     "migration:run": "pnpm typeorm migration:run",
     "migration:revert": "pnpm typeorm migration:revert",
-    "prepare": "husky install",
-    "sonar": "node ./sonar-analysis.js"
+    "sonar": "node ./sonar-analysis.js",
+    "format:check": "prettier --check \"src/**/*.{ts,js,json,md}\""
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -73,7 +73,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.0.0",
-    "husky": "^9.1.7",
     "jest": "^30.0.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.4.2",
