--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestBoilerPlate",
+  "name": "blogApp",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -39,6 +39,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
@@ -46,6 +47,7 @@
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -63,6 +65,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
