chore: fix import order

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+  "lint": "eslint \"src/**/*.{ts,js}\"",
+  "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
     "test": "jest",
     "prepare": "husky",
     "test:watch": "jest --watch",
