--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-  "lint": "eslint \"src/**/*.{ts,js}\"",
-  "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
+    "lint": "eslint \"src/**/*.{ts,js}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,js}\" --fix",
     "test": "jest",
     "prepare": "husky",
     "test:watch": "jest --watch",
@@ -75,9 +75,11 @@
     "danger-pnpm": "^1.0.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^9.1.2",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-typescript-sort-keys": "^3.3.0",
     "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
