add throttler for rate limitting

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
+    "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^11.0.0",
     "@sentry/node": "^10.32.1",
     "@thi.ng/ksuid": "^3.2.106",
