--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
+    "eslint-plugin-typescript-sort-keys": "^3.3.0",
     "express": "^5.2.1",
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.2",
@@ -51,6 +52,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28",
     "winston": "^3.19.0"
@@ -75,6 +77,7 @@
     "danger-pnpm": "^1.0.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^9.1.2",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
