--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "http-status-codes": "^2.3.0",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.3",
+    "mailtrap": "^4.4.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.12",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
