Add sonar token to sonar properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.sources=src
 sonar.host.url=http://localhost:9000
 
 # auth via environment variable (NO secrets in repo)
-sonar.token=sqp_d05dec620d5b2fa88cd8be0203fa8f8eb7c4f24f
+sonar.token=${SONAR_TOKEN}
 
 # you have no tests yet → avoid 0% coverage gate failure
 sonar.coverage.exclusions=src/**
